exports[`test should render with error mesage 1`] = `
<div>
  <HelmetWrapper
    title="changePassword" />
  <MobileHeader
    leftChildren={
      <MobileHeaderIcon
        component={[Function]}
        to={[Function]}>
        <IconMenu
          size="1em" />
      </MobileHeaderIcon>
    }
    title="changePassword" />
  <form
    onSubmit={[Function]}>
    <main>
      <styled.div>
        <div>
          <styled.label
            htmlFor="new1">
            newPassword.label
          </styled.label>
          <Input
            kind="error"
            name="new1"
            onChange={[Function]}
            placeholder="newPassword.placeholder"
            required={true}
            type="password"
            value="1234" />
          <Styled(Component)
            color="error">
            lengthError
          </Styled(Component)>
        </div>
        <div>
          <styled.label
            htmlFor="new2">
            newPasswordAgain.label
          </styled.label>
          <Input
            kind="error"
            name="new2"
            onChange={[Function]}
            placeholder="newPasswordAgain.placeholder"
            required={true}
            type="password"
            value="12345" />
          <Styled(Component)
            color="error">
            newPasswordAgain.error
          </Styled(Component)>
        </div>
      </styled.div>
    </main>
    <MobileFixedFooter>
      <styled.div>
        <Styled(Link)
          to={[Function]}>
          <Button
            block={true}
            component="button"
            kind="default">
            cancel
          </Button>
        </Styled(Link)>
        <Button
          block={true}
          component="input"
          kind="primary"
          type="submit"
          value="save" />
      </styled.div>
    </MobileFixedFooter>
  </form>
</div>
`;

exports[`test should renders <Password> correctly 1`] = `
<div>
  <HelmetWrapper
    title="changePassword" />
  <MobileHeader
    leftChildren={
      <MobileHeaderIcon
        component={[Function]}
        to={[Function]}>
        <IconMenu
          size="1em" />
      </MobileHeaderIcon>
    }
    title="changePassword" />
  <form
    onSubmit={[Function]}>
    <main>
      <styled.div>
        <div>
          <styled.label
            htmlFor="new1">
            newPassword.label
          </styled.label>
          <Input
            kind="primary"
            name="new1"
            onChange={[Function]}
            placeholder="newPassword.placeholder"
            required={true}
            type="password"
            value="" />
        </div>
        <div>
          <styled.label
            htmlFor="new2">
            newPasswordAgain.label
          </styled.label>
          <Input
            kind="primary"
            name="new2"
            onChange={[Function]}
            placeholder="newPasswordAgain.placeholder"
            required={true}
            type="password"
            value="" />
        </div>
      </styled.div>
    </main>
    <MobileFixedFooter>
      <styled.div>
        <Styled(Link)
          to={[Function]}>
          <Button
            block={true}
            component="button"
            kind="default">
            cancel
          </Button>
        </Styled(Link)>
        <Button
          block={true}
          component="input"
          kind="primary"
          type="submit"
          value="save" />
      </styled.div>
    </MobileFixedFooter>
  </form>
</div>
`;
